[package]
name = "esp-cam-rs"
version = "0.1.0"
authors = ["chenhuayou <chen.hua.you@163.com>"]
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"


[dependencies]
esp-idf-sys = { version = "0.31", features = ["binstart"] }
esp-idf-svc = "0.41"
esp-idf-hal = "0.37"
embedded-svc = "0.21"
anyhow = "1"
log = "0.4"


[build-dependencies]
embuild = "0.29"
anyhow = "1"
